# xdms-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: binaries.yml  ci.yml
examples/: dms2adf.rs  fetch_fixtures.rs
src/: bitreader.rs  crc.rs  error.rs  header.rs  lib.rs  main.rs
src/decompress/: .mod.rs.swp  deep.rs  heavy.rs  medium.rs  mod.rs  quick.rs  rle.rs  tables.rs
tests/: fixtures.txt  integration.rs
tests/data/: README.md  rle_small.dms
