[package]
name = "xdms"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"
description = "Pure-Rust, dependency-free unpacker for DMS (Disk Masher System) Amiga disk archives into raw ADF disk images."
authors = ["Mikael Lund"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mlund/xdms-rs"
readme = "README.md"
keywords = ["dms", "adf", "amiga", "decompression", "no_std"]
categories = ["compression", "encoding", "no-std"]
exclude = ["tests/fixtures/"]

[features]
default = ["std"]
# `std` adds the std::io Read/Write API and From<std::io::Error>. Without it the
# crate is no_std (alloc only), exposing slice-in / Vec-out entry points.
std = []

# The CLI uses the std-only API, so it is skipped on --no-default-features builds.
[[bin]]
name = "xdms-rs"
path = "src/main.rs"
required-features = ["std"]

[lints.clippy]
nursery = { level = "warn", priority = -1 }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
